--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CERTIFITATE</title>
+    <style>
+.c1{
+    height: 850px;
+      width: 800px;
+        align-items: center;
+        margin-left: 30%;
+
+}
+.user{
+    height: 600px;
+    width: 550px;
+    border: 3px;
+    border-style: double;
+    border-color: black;
+}
+    </style>
 </head>
 <body>
-    
+    <div class="c1">
+<div class="user">muskan</div>
+    </div>
 </body>
 </html>
