--- a/index.html
+++ b/index.html
@@ -77,7 +77,18 @@ h3{
     background-color: #ff9966;
 
 }
-
+  /* for tablet */
+  @media screen and (min-width: 768px) and (max-width: 992px) {
+    
+   
+  }
+/* for moblie */
+  @media screen and (min-width: 100px) and (max-width: 768px){
+     }
+   /*for laptop */
+   @media screen and (min-width: 992px) and (max-width: 1200px){
+     
+   }
     </style>
 </head>
 <body>
