--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@ h3{
 }
   /* for tablet */
   @media screen and (min-width: 768px) and (max-width: 992px) {
+    .user{
+        
+    }
     
    
   }
