--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@ h3{
   /* for tablet */
   @media screen and (min-width: 768px) and (max-width: 992px) {
     .user{
-        
+        background-color: aqua;
+
     }
     
    
