--- a/index.html
+++ b/index.html
@@ -68,21 +68,23 @@ h3{
 }
 .s1{
     margin-left: 10%;
-    background-color: #ff9966;
 
 }
 .s2{
     margin-left: 10%;
     margin-bottom: 5%;
-    background-color: #ff9966;
 
 }
   /* for tablet */
   @media screen and (min-width: 768px) and (max-width: 992px) {
+    body{
+        background-color:  #ffcccc;
+    }
     .user{
         background-color: aqua;
 
     }
+    
     
    
   }
