--- a/index.html
+++ b/index.html
@@ -79,9 +79,17 @@ h3{
   @media screen and (min-width: 768px) and (max-width: 992px) {
     body{
         background-color:  #ffcccc;
-    }
+       }
     .user{
-        background-color: aqua;
+        height: auto;
+        border: 6px;
+    border-style: double;
+    border-color: #ff0000;
+    border-radius: 5px;
+    background-color:#ff8080 ;
+    box-shadow: 2px 2px 5px 6px rgb(153, 0, 0)
+    ;
+    
 
     }
     
