mobile response added

--- a/index.html
+++ b/index.html
@@ -98,6 +98,21 @@ h3{
   }
 /* for moblie */
   @media screen and (min-width: 100px) and (max-width: 768px){
+    body{
+        background-color:  #ccf2ff;
+       }
+    .user{
+        height: auto;
+        border: 6px;
+    border-style: double;
+    border-color: #00bfff;
+    border-radius: 5px;
+    background-color:#99e6ff;
+    box-shadow: 2px 2px 5px 6px rgb(0, 134, 179);
+    
+
+    }
+   
      }
    /*for laptop */
    @media screen and (min-width: 992px) and (max-width: 1200px){
